# ruff

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yaml
ruff_cli/: Cargo.toml  pyproject.toml
ruff_cli/src/: commands.rs  diagnostics.rs  lib.rs  main.rs  printer.rs
ruff_dev/: Cargo.toml
ruff_dev/src/: generate_cli_help.rs
src/: diagnostics.rs  lib.rs  linter.rs  registry.rs  violations.rs
src/ast/: helpers.rs
src/checkers/: ast.rs
src/flake8_simplify/plugins/: ast_if.rs  fix_if.rs  mod.rs
src/flake8_simplify/snapshots/: ruff__flake8_simplify__tests__SIM102_SIM102.py.snap
